--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
       <meta charset="UTF-8">
+      <!-- Change favicon to SpaceX favicon -->
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
-      <title>DaftCode React Starter</title>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
+      <title>SpaceX Launches</title>
   </head>
   <body>
     <div id="root"></div>
