--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
       <title>SpaceX Launches</title>
-  </head>
+  <link href="main.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  </body>
+  <script type="text/javascript" src="main.1ba62aa032ca6ad7a655.js"></script></body>
 </html>
