--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <meta charset="UTF-8">
-      <!-- Change favicon to SpaceX favicon -->
-      <link rel="icon" href="favicon.ico" type="image/x-icon" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
-      <title>SpaceX Launches</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Change favicon to SpaceX favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
+  <title>SpaceX Launches</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
