--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Change favicon to SpaceX favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
-  <title>SpaceX Launches</title>
-<link href="main.css" rel="stylesheet"></head>
-
-<body>
-  <div id="root"></div>
-<script type="text/javascript" src="main.be4c416bffea378e5244.js"></script></body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"/><link rel="manifest" href="/spacex-launches/manifest.json"><link rel="shortcut icon" href="/spacex-launches/favicon.ico"><title>SpaceX Launches</title><link href="/spacex-launches/static/css/main.0343740e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/spacex-launches/static/js/main.eb82ce3a.js"></script></body></html>
